--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,23 +4,33 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "@fortawesome/fontawesome-free-solid": "^5.0.13",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "^3.4.3",
     "axios": "^0.20.0",
-    "flux": "^3.1.3"
+    "flux": "^3.1.3",
+    "moment": "^2.29.1",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^16.13.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3"
   },
   "devDependencies": {
-    "node-sass": "^4.14.1",
-    "bootstrap": "^4.5.2",
-    "react-test-renderer": "^16.13.1",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.6",
+    "bootstrap": "^4.5.2",
+    "eslint-plugin-react": "^7.20.6",
     "husky": "^4.2.5",
-    "eslint-plugin-react": "^7.20.6"
+    "node-sass": "^4.14.1",
+    "react-router-dom": "^5.2.0",
+    "react-test-renderer": "^16.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
